Styled the page

--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -1,3 +1,39 @@
-// Place all the styles related to the People controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  border-top: 10px #d35400 solid;  
+  font-family: Helvetica, times, sans-serif;
+}
+
+h1 {
+  font-size: 40px;
+  padding: 20px 20px 15px 0;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-style: italic;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: 16px;
+  border-bottom: solid 1px black;
+  margin: 10px 0;
+}
+
+p {
+  font-style: italic;
+}
+
+a {
+ color: #d35400;
+ text-decoration: none;
+ font-size: 14px;
+}
+
+.links a {
+  display: block;
+  line-height: 18px;
+}
